Logic/Parser/Grammar/coolgrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\Ale\Desktop\Proyecto\Compiler\Logic\Parser\Grammar\coolgrammar.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class coolgrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, STR=19, CLASS=20, INHERITS=21, LET=22, IN=23, WS=24, IF=25, 
		THEN=26, ELSE=27, FI=28, WHILE=29, LOOP=30, POOL=31, NEW=32, TYPE=33, 
		ISVOID=34, INTEGER=35, TRUE=36, FALSE=37, NOT=38, ID=39;
	public const int
		RULE_program = 0, RULE_class = 1, RULE_feature = 2, RULE_method = 3, RULE_attr = 4, 
		RULE_formal = 5, RULE_expr = 6, RULE_expr_list = 7, RULE_args_def = 8, 
		RULE_args_call = 9;
	public static readonly string[] ruleNames = {
		"program", "class", "feature", "method", "attr", "formal", "expr", "expr_list", 
		"args_def", "args_call"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'{'", "'}'", "'('", "')'", "':'", "'<-'", "'@'", "'.'", 
		"'~'", "'*'", "'/'", "'+'", "'-'", "'<'", "'<='", "'='", "','", null, 
		"'class'", "'inherits'", "'let'", "'in'", null, "'if'", "'then'", "'else'", 
		"'fi'", "'while'", "'loop'", "'pool'", "'new'", null, "'isvoid'", null, 
		"'true'", "'false'", "'not'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "STR", "CLASS", "INHERITS", 
		"LET", "IN", "WS", "IF", "THEN", "ELSE", "FI", "WHILE", "LOOP", "POOL", 
		"NEW", "TYPE", "ISVOID", "INTEGER", "TRUE", "FALSE", "NOT", "ID"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "coolgrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static coolgrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public coolgrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public coolgrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ClassContext[] @class() {
			return GetRuleContexts<ClassContext>();
		}
		public ClassContext @class(int i) {
			return GetRuleContext<ClassContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 23;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 20; @class();
				State = 21; Match(T__0);
				}
				}
				State = 25;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==CLASS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassContext : ParserRuleContext {
		public ITerminalNode CLASS() { return GetToken(coolgrammarParser.CLASS, 0); }
		public ITerminalNode[] TYPE() { return GetTokens(coolgrammarParser.TYPE); }
		public ITerminalNode TYPE(int i) {
			return GetToken(coolgrammarParser.TYPE, i);
		}
		public ITerminalNode INHERITS() { return GetToken(coolgrammarParser.INHERITS, 0); }
		public FeatureContext[] feature() {
			return GetRuleContexts<FeatureContext>();
		}
		public FeatureContext feature(int i) {
			return GetRuleContext<FeatureContext>(i);
		}
		public ClassContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_class; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClass(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassContext @class() {
		ClassContext _localctx = new ClassContext(Context, State);
		EnterRule(_localctx, 2, RULE_class);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 27; Match(CLASS);
			State = 28; Match(TYPE);
			State = 31;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==INHERITS) {
				{
				State = 29; Match(INHERITS);
				State = 30; Match(TYPE);
				}
			}

			State = 33; Match(T__1);
			State = 39;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ID) {
				{
				{
				State = 34; feature();
				State = 35; Match(T__0);
				}
				}
				State = 41;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 42; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FeatureContext : ParserRuleContext {
		public FeatureContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_feature; } }
	 
		public FeatureContext() { }
		public virtual void CopyFrom(FeatureContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class F_methodContext : FeatureContext {
		public MethodContext method() {
			return GetRuleContext<MethodContext>(0);
		}
		public F_methodContext(FeatureContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitF_method(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class F_attrContext : FeatureContext {
		public AttrContext attr() {
			return GetRuleContext<AttrContext>(0);
		}
		public F_attrContext(FeatureContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitF_attr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FeatureContext feature() {
		FeatureContext _localctx = new FeatureContext(Context, State);
		EnterRule(_localctx, 4, RULE_feature);
		try {
			State = 46;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				_localctx = new F_attrContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 44; attr();
				}
				break;
			case 2:
				_localctx = new F_methodContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 45; method();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MethodContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(coolgrammarParser.ID, 0); }
		public Args_defContext args_def() {
			return GetRuleContext<Args_defContext>(0);
		}
		public ITerminalNode TYPE() { return GetToken(coolgrammarParser.TYPE, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public MethodContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_method; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMethod(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MethodContext method() {
		MethodContext _localctx = new MethodContext(Context, State);
		EnterRule(_localctx, 6, RULE_method);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48; Match(ID);
			State = 49; Match(T__3);
			State = 50; args_def();
			State = 51; Match(T__4);
			State = 52; Match(T__5);
			State = 53; Match(TYPE);
			State = 54; Match(T__1);
			State = 55; expr(0);
			State = 56; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AttrContext : ParserRuleContext {
		public FormalContext formal() {
			return GetRuleContext<FormalContext>(0);
		}
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public AttrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_attr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAttr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AttrContext attr() {
		AttrContext _localctx = new AttrContext(Context, State);
		EnterRule(_localctx, 8, RULE_attr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58; formal();
			State = 61;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__6) {
				{
				State = 59; Match(T__6);
				State = 60; expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FormalContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(coolgrammarParser.ID, 0); }
		public ITerminalNode TYPE() { return GetToken(coolgrammarParser.TYPE, 0); }
		public FormalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formal; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormal(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FormalContext formal() {
		FormalContext _localctx = new FormalContext(Context, State);
		EnterRule(_localctx, 10, RULE_formal);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63; Match(ID);
			State = 64; Match(T__5);
			State = 65; Match(TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
	 
		public ExprContext() { }
		public virtual void CopyFrom(ExprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class BodyContext : ExprContext {
		public Expr_listContext expr_list() {
			return GetRuleContext<Expr_listContext>(0);
		}
		public BodyContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBody(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CompContext : ExprContext {
		public IToken op;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public CompContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignContext : ExprContext {
		public ITerminalNode ID() { return GetToken(coolgrammarParser.ID, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public AssignContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssign(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LetContext : ExprContext {
		public ITerminalNode LET() { return GetToken(coolgrammarParser.LET, 0); }
		public AttrContext[] attr() {
			return GetRuleContexts<AttrContext>();
		}
		public AttrContext attr(int i) {
			return GetRuleContext<AttrContext>(i);
		}
		public ITerminalNode IN() { return GetToken(coolgrammarParser.IN, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public LetContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLet(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IntContext : ExprContext {
		public ITerminalNode INTEGER() { return GetToken(coolgrammarParser.INTEGER, 0); }
		public IntContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IsvoidContext : ExprContext {
		public ITerminalNode ISVOID() { return GetToken(coolgrammarParser.ISVOID, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public IsvoidContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIsvoid(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class SumarestaContext : ExprContext {
		public IToken op;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public SumarestaContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSumaresta(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WhileContext : ExprContext {
		public ITerminalNode WHILE() { return GetToken(coolgrammarParser.WHILE, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode LOOP() { return GetToken(coolgrammarParser.LOOP, 0); }
		public ITerminalNode POOL() { return GetToken(coolgrammarParser.POOL, 0); }
		public WhileContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhile(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IdContext : ExprContext {
		public ITerminalNode ID() { return GetToken(coolgrammarParser.ID, 0); }
		public IdContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitId(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Call_methodContext : ExprContext {
		public ITerminalNode ID() { return GetToken(coolgrammarParser.ID, 0); }
		public Args_callContext args_call() {
			return GetRuleContext<Args_callContext>(0);
		}
		public Call_methodContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCall_method(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class New_typeContext : ExprContext {
		public ITerminalNode NEW() { return GetToken(coolgrammarParser.NEW, 0); }
		public ITerminalNode TYPE() { return GetToken(coolgrammarParser.TYPE, 0); }
		public New_typeContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNew_type(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MultdivContext : ExprContext {
		public IToken op;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public MultdivContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMultdiv(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ParentesisContext : ExprContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ParentesisContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParentesis(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Unary_expContext : ExprContext {
		public IToken op;
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode NOT() { return GetToken(coolgrammarParser.NOT, 0); }
		public Unary_expContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnary_exp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IfContext : ExprContext {
		public ITerminalNode IF() { return GetToken(coolgrammarParser.IF, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode THEN() { return GetToken(coolgrammarParser.THEN, 0); }
		public ITerminalNode ELSE() { return GetToken(coolgrammarParser.ELSE, 0); }
		public ITerminalNode FI() { return GetToken(coolgrammarParser.FI, 0); }
		public IfContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StringContext : ExprContext {
		public ITerminalNode STR() { return GetToken(coolgrammarParser.STR, 0); }
		public StringContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitString(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DispatchContext : ExprContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode ID() { return GetToken(coolgrammarParser.ID, 0); }
		public Args_callContext args_call() {
			return GetRuleContext<Args_callContext>(0);
		}
		public ITerminalNode TYPE() { return GetToken(coolgrammarParser.TYPE, 0); }
		public DispatchContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDispatch(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BoolContext : ExprContext {
		public IToken cons;
		public ITerminalNode TRUE() { return GetToken(coolgrammarParser.TRUE, 0); }
		public ITerminalNode FALSE() { return GetToken(coolgrammarParser.FALSE, 0); }
		public BoolContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcoolgrammarVisitor<TResult> typedVisitor = visitor as IcoolgrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBool(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		return expr(0);
	}

	private ExprContext expr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ExprContext _localctx = new ExprContext(Context, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 12;
		EnterRecursionRule(_localctx, 12, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 120;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				_localctx = new Call_methodContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
